Update Java command to enable native access