@@ -1,4 +1,4 @@
 #!/bin/bash
 echo starting...
 cd velocity
-java -Xmx1024M -Xms1024M -jar velocity.jar
+java --enable-native-access=ALL-UNNAMED -Xmx1024M -Xms1024M -jar velocity.jar
